2006-11-02  Brooks Moses  <brooks.moses@codesourcery.com>

	* doc/invoke.texi: Fix mfp-trap-mode typo.

2006-11-02  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (sparc-sun-solaris2*): Update GMP/MPFR build
	instructions.
	(sparc64-sun-solaris2*): Likewise.

2006-11-02  Uros Bizjak <ubizjak@gmail.com>

	PR target/29377
	* config/h8300/h8300.c (h8300_emit_stack_adjustment): Change "size"
	argument to HOST_WIDE_INT.  Update function prototype.
	(round_frame_size): Change return type to HOST_WIDE_INT.  Change
	"size" argument to HOST_WIDE_INT.  Update function prototype.

2006-11-01  Chris Johns <chris@contemporary.net.au>

	PR bootstrap/28400
	* Makefile.in (install-driver): Use exeext when installing
	$target-gcc-$version.

2006-11-01  Andrew Haley  <aph@redhat.com>

	* fold-const.c (fold_unary): Don't fold (t1)(t2) to (t1) if this
	is a Java program.

2006-11-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* builtins.def (gamma, lgamma): Use ATTR_MATHFN_FPROUNDING_STORE.

2006-10-31  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/24071
	* gthr-posix.h (__gthread_active_p): New implementation on Solaris.
	* gthr-posix95.h (__gthread_active_p): Likewise.

2006-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/29637
	* tree.c (make_vector_type): Don't recurse if TYPE_MAIN_VARIANT
	of the innertype is the innertype itself.

	* gcc.dg/pr29637.c: New test.

2006-10-27  Mike Stump  <mrs@apple.com>

	* config/darwin-c.c (darwin_cpp_builtins): Move __STATIC__ and
	__DYNAMIC__ from here back to ...
	* config/darwin.h (CPP_SPEC): ... here.

2006-10-26  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.c (s390_init_frame_layout): Check positive
	frame_size.

2006-10-26  Ben Elliston  <bje@au.ibm.com>

	* doc/extend.texi (Variable Attributes): Typo fix.

2006-10-25  Steve Ellcey  <sje@cup.hp.com>

	* config/ia64/hpux.h: Define _INCLUDE__STDC_A1_SOURCE in C++.
	Add unix98.o to link line.
